# cpp-slib-cmake

./: .bocan.yaml  .gitignore  .tmuxp.yaml  CMakeLists.txt  CMakePresets.json  README.md
scripts/: build-debug.sh  build-release.sh  clean.sh  run-debug.sh  run-release.sh  run-test.sh
source/Template-App/: CMakeLists.txt
source/Template-App/source/: main.cpp
source/Template-Core/: CMakeLists.txt
source/Template-Core/source/: Module.cpp  Module.hpp  Module.test.cpp
